@@ -1,6 +1,6 @@
 [project]
 name = "oterm"
-version = "0.7.1"
+version = "0.7.2"
 description = "A text-based terminal client for Ollama."
 authors = [{ name = "Yiorgis Gozadinos", email = "ggozadinos@gmail.com" }]
 license = { text = "MIT" }
