@@ -4,6 +4,9 @@ Changelog
 0.7.2 - 
 ------------------
 
+- Ability to add custom tools!
+  [ggozad]
+
 - Add a web tool, giving Ollama access to the web.
   [ggozad] 
 
